--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta name='keywords' content='CARS, MOTORCYCLE, TRIPS, TRAVEL, ADVENTURE, TV, LIVE, SHOW, CALENDAR,'/ />
+    <meta name='description' content='CFTV is a Motorcycle, Car, Special Events, Travel Show, with some crazy hosts who want you to "Come Along for the Ride, and Enjoy the Adventure!"' />
+    <meta name='about' content='History' />
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
