--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name='keywords' content='CARS, MOTORCYCLE, TRIPS, TRAVEL, ADVENTURE, TV, LIVE, SHOW, CALENDAR,'/ />
-    <meta name='description' content='CFTV is a Motorcycle, Car, Special Events, Travel Show, with some crazy hosts who want you to "Come Along for the Ride, and Enjoy the Adventure!"' />
-    <meta name='about' content='History' />
+
+    <meta name="keywords" content="Cars, Motorcycle, Trips, Travel, Adventure, TV, Live, show, calendar"  />
+    <meta name="description" content="CFTV.Live is a Motorcycle, Car, Special Event, Travel Show, with some crazy hosts who want you to 'Come Along for the Ride, and Enjoy the Adventure!'" />
 
     <!--
       manifest.json provides metadata used when your web app is added to the
